stylesheets/landing.css
/* ... */
.bx-viewport{
  top: -2px;
  margin: 0 auto;
}

@media only screen and (max-width: 500px){
  footer {
    margin-top: 121px;
  }
}

@media only screen and (max-width: 395px){
  .list--horizontal{
    width: 273px!important;
    margin-left: 0!important;
    padding: 0 !important;
    margin: 0 auto !important;
    margin-bottom: 20px!important;
  }
  .wrapper{
    padding: 0;
  }
}

@media only screen and (max-width: 340px){
  .arrow--right{
    right: 0;
  }
}

